[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "A CLI tool to fetch papers from PubMed"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "get_papers" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.4"
typer = "^0.16.0"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
